# api/handlers/user.go
@@ -23,15 +23,10 @@ import (
 func ChangePassword(service user.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var requestBody entities.ChangePasswordInputSchema
-		var jsonResponse presenter.JsonResponse
 
 		// parsing error
 		if err := c.BodyParser(&requestBody); err != nil {
-			jsonResponse = presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: err.Error(),
-			}
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
@@ -43,30 +38,18 @@ func ChangePassword(service user.Service) fiber.Handler {
 		// service -> repository 에서 처리
 		err := service.ChangePassword(&requestBody, c)
 		if err != nil {
-			jsonResponse = presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: err.Error(),
-			}
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
 		// newPassword와 newPasswordConfirm이 다름
 		// => 400 error
 		if newPassword != newPasswordConfirm {
-			jsonResponse = presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: "password didn't not match",
-			}
+			jsonResponse := presenter.NewJsonResponse(true, "password didn't match", nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
-		jsonResponse = presenter.JsonResponse{
-			Error:   true,
-			Data:    "success change password",
-			Message: "",
-		}
+		jsonResponse := presenter.NewJsonResponse(false, "success change password", nil)
 		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
@@ -88,39 +71,23 @@ func CreateUser(service user.Service) fiber.Handler {
 
 		// json parsing
 		if err != nil {
-			jsonResponse := presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: err.Error(),
-			}
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
 		err = service.CreateUser(&requestBody)
 		if err != nil {
-			jsonResponse := presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: err.Error(),
-			}
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
 		// password와 confirm_password가 다르면 error
 		if requestBody.Password != requestBody.PasswordConfirm {
-			jsonResponse := presenter.JsonResponse{
-				Error:   false,
-				Data:    nil,
-				Message: "password didn't match",
-			}
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(http.StatusBadRequest).JSON(jsonResponse)
 		}
 
-		jsonResponse := presenter.JsonResponse{
-			Error:   false,
-			Data:    nil,
-			Message: "Welcome",
-		}
+		jsonResponse := presenter.NewJsonResponse(false, "welcome!!", nil)
 		return c.Status(http.StatusOK).JSON(jsonResponse)
 	}
 }
